--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Practice</string>
+    <string name="help"><u>도움이 필요하세요? | About 단디</u></string>
 
 </resources>
